# comfy-kitchen-hip

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py  test_cutlass.cu
comfy_kitchen/: __init__.py  constraints.py
comfy_kitchen/backends/cuda/: .clangd  CMakeLists.txt  __init__.py  compile_commands.json  cublaslt_runtime.h  dlpack_bindings.cpp  hipify.sh
comfy_kitchen/backends/cuda/ops/: awq_w4a16.cu  convrot_w4a4.cu  cublas_gemm_int8.cu  cutlass_gemm_int8.cu  int8_linear.cu  quantize_svdquant_w4a4.cu  scaled_mm_svdquant_w4a4.cu  svdquant_utils.cuh
comfy_kitchen/backends/eager/: __init__.py  awq.py  convrot_w4a4.py  quantization.py  svdquant.py
comfy_kitchen/backends/hip/: .clangd  .gitignore  CMakeLists.txt  __init__.py  dlpack_bindings.cpp  dtype_dispatch.h  float_utils.h  hipblaslt_runtime.h  utils.h
comfy_kitchen/backends/hip/ops/: adaln.cu  ck_gemm_int8.cu  convrot_w4a4.cu  convrot_w4a4.cu.hip  cublas_gemm_int8.cu  cublas_gemm_nvfp4.cu  int8_linear.cu  per_tensor_quantize.cu  quantize_nvfp4.cu  svdquant_utils.cuh
comfy_kitchen/backends/rocm/: CMakeLists.txt  __init__.py  dlpack_bindings.cpp  dtype_dispatch.h  float_utils.h
comfy_kitchen/backends/rocm/ops/: apply_rope.cu  int8_linear.cu
comfy_kitchen/backends/triton/: __init__.py  quantization.py
comfy_kitchen/tensor/: __init__.py  awq_w4a16.py  base.py  convrot_w4a4.py  int8.py  svdquant_w4a4.py
samples/: int8_model_patcher.py
tests/: test_backends.py  test_constraints.py  test_convrot_w4a4.py  test_dlpack.py  test_int8.py  test_integration.py  test_qdq.py  test_svdquant_w4a4.py  test_tensor.py
